# PyForgeAPI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml  release.yaml  validations.yaml
app/fastipy/src/core/: request_handler.py
app/fastipy/src/routes/: router.py
examples/Chat API/: main.py
examples/Database Chat/: main.py
examples/Person API/: main.py
fastify/src/classes/: json_database.py
fastify/src/core/: fastipy.py  reply.py  request.py  request_handler.py
fastify/src/helpers/: route_helpers.py
fastify/src/models/: form.py
fastify/src/routes/: router.py
fastipy/: __init__.py
fastipy/src/classes/: template_render.py
fastipy/src/core/: fastipy.py  reply.py
fastipy/src/helpers/: async_sync_helpers.py  content_type.py
fastipy/src/models/: body.py  file.py
fastipy/src/routes/: router.py
fastipy/src/types/: fastipy.py  plugins.py  routes.py
tests/: api.py  test.py
